--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-fastapi==0.95.2
-uvicorn==0.22.0
-paddleocr==2.6.1.3
-paddlepaddle==2.6.2
-PyMuPDF==1.20.2
-pandas==2.0.3
-openpyxl==3.1.2
-python-multipart==0.0.6
+numpy
+opencv-python
+fastapi
+uvicorn
+paddleocr
+paddlepaddle
+PyMuPDF
+pandas
+openpyxl
+python-multipart
