--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-flask
-gunicorn
-layoutparser
-Pillow
-opencv-python-headless
-numpy
-pandas
-tensorflow
-pdf2image
-paddleocr
+fastapi==0.104.1
+uvicorn==0.23.2
+pdfplumber==0.10.3
+pandas==2.1.1
+openpyxl==3.1.2
+xlsxwriter==3.1.9
+python-multipart==0.0.6
+apscheduler==3.10.4
+paddleocr==2.7.0.3
+pdf2image==1.17.0
+pillow==10.0.1
+opencv-python-headless==4.8.1.78
+numpy==1.26.0
